modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -299,6 +299,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Printing the Elements of a One Dimensional `Array`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using a `while` Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "// Observe the First and Last Indices of the array\n",
+    "int FirstIndex = 0,\n",
+    "    LastIndex  = SixElementIntegerArray.Length - 1;\n",
+    "\n",
+    "// Start a pointer to track the Current Index\n",
+    "int CurrentIndex = FirstIndex;\n",
+    "\n",
+    "// Iterating While the Current Index has not yet exceeded the Last Index:\n",
+    "while( CurrentIndex <= LastIndex )\n",
+    "{\n",
+    "\n",
+    "    // Print the Value at the Current Index,\n",
+    "    // taking care to simultaneously increment the Current Index\n",
+    "    Console.Write($\"{ SixElementIntegerArray[ CurrentIndex++ ] } \");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using a `for` Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "// Iterating For each of the elements from the First Index of the array up until the Last:\n",
+    "for( int CurrentIndex = 0; CurrentIndex < SixElementIntegerArray.Length; CurrentIndex++ )\n",
+    "{\n",
+    "\n",
+    "    // Print the Value at the Current Index\n",
+    "    Console.Write($\"{ SixElementIntegerArray[ CurrentIndex ] } \");\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
+    "##### Using a `foreach` Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 "
+     ]
+    }
+   ],
+   "source": [
+    "// For Each Element in the Six Element Array:\n",
+    "foreach( int Element in SixElementIntegerArray )\n",
+    "{\n",
+    "    \n",
+    "    // Print that Element\n",
+    "    Console.Write($\"{ Element } \");\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Bounds of a One Dimensional `Array`"
    ]
   },
