modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -422,7 +422,7 @@
     "foreach( int Element in SixElementIntegerArray )\n",
     "{\n",
     "    \n",
-    "    // Print that Element\n",
+    "    // Print that Element's Value\n",
     "    Console.Write($\"{ Element } \");\n",
     "    \n",
     "}"
