--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -47,8 +47,10 @@
     "All elements of a given array are of the *same type*, no matter whether they are primitive or reference types. This allows us to represent a group of similar elements as an *ordered sequence* and work on them as a whole.   \n",
     "   \n",
     "Arrays can be in different *dimensions*, but the most used are the *one-dimensional* and the *two-dimensional* arrays. \n",
-    "- **One-dimensional** arrays are also called *vectors* \n",
-    "- **Two-dimensional** are also known as *matrices*."
+    "- **One-dimensional** arrays \n",
+    "  - are also called *vectors* \n",
+    "- **Multi-dimensional** arrays\n",
+    "  - **Two-Dimensional** arrays, a subset of **Multi-dimensional** arrays, are also known as *matrices*."
    ]
   },
   {
@@ -507,6 +509,13 @@
    "metadata": {},
    "source": [
     "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multidimensional `Array`s"
    ]
   }
  ],
