--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -688,7 +688,7 @@
     }
    },
    "source": [
-    "###### Row 1"
+    "###### **Row 1**"
    ]
   },
   {
@@ -799,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Row 2"
+    "###### **Row 2**"
    ]
   },
   {
@@ -914,7 +914,7 @@
     }
    },
    "source": [
-    "###### Row 3"
+    "###### **Row 3**"
    ]
   },
   {
@@ -1019,6 +1019,108 @@
    ],
    "source": [
     "TwoDimensionalIntegerArray[ 2 , 3 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we assign the index for rows to `row`, and the index for columns to `col`, then we can access any element as shown:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "TwoDimensionalIntegerArray[ row , col ] \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we use **multidimensional** arrays, each element is unique and can be identified with indices from the array:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "nDimensionalArray[ index1, … , indexN ]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Length of a Two-Dimensional `Array`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each **dimension** of a **multidimensional** array has its own `Length`, which can be accessed during the execution of the program. \n",
+    "\n",
+    "We can get: \n",
+    "- the number of the ***rows*** of by using `GetLength(0)` \n",
+    "- the number of all ***columns*** per row with `GetLength(1)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">3</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TwoDimensionalIntegerArray.GetLength( 0 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">4</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TwoDimensionalIntegerArray.GetLength( 1 )"
    ]
   }
  ],
