modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -1025,6 +1025,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Generalizations for N Dimensional Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If we assign the index for rows to `row`, and the index for columns to `col`, then we can access any element as shown:"
    ]
   },
