modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -1025,13 +1025,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Generalizations for N Dimensional Arrays"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "If we assign the index for rows to `row`, and the index for columns to `col`, then we can access any element as shown:"
    ]
   },
@@ -1080,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1106,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1128,6 +1121,96 @@
    ],
    "source": [
     "TwoDimensionalIntegerArray.GetLength( 1 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Printing the Elements of a Two Dimensional `Array`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
+    "##### Using a `while` Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  \r\n",
+      "5  6  7  8  \r\n",
+      "9  10 11 12 \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Observe the First Row and Last Row Indices of the array,\n",
+    "// along with the First Column and Last Column Indices of the array\n",
+    "int FirstRowIndex = 0,\n",
+    "    FirstColIndex = 0,\n",
+    "    LastRowIndex  = TwoDimensionalIntegerArray.GetLength(0) - 1,\n",
+    "    LastColIndex  = TwoDimensionalIntegerArray.GetLength(1) - 1;\n",
+    "\n",
+    "\n",
+    "// Start pointers to track the Current Row Index \n",
+    "// along with the Current Column Index\n",
+    "int CurrentRowIndex = FirstRowIndex,\n",
+    "    CurrentColIndex = FirstColIndex;\n",
+    "\n",
+    "\n",
+    "// Iterating While the Current Row Index has not yet exceeded the Last Row Index:\n",
+    "while( CurrentRowIndex <= LastRowIndex )\n",
+    "{\n",
+    "\n",
+    "    // Let the Current Column Index be reset to the First Column Index\n",
+    "    CurrentColIndex = FirstColIndex;\n",
+    "\n",
+    "\n",
+    "    // Iterating While the Current Column Index has not yet exceeded the Last Column Index:\n",
+    "    while( CurrentColIndex <= LastColIndex )\n",
+    "    {\n",
+    "        \n",
+    "        // Print the Value at the Current Column Index,\n",
+    "        // formatted to present a charater width of 3 digits to the right of wach element,\n",
+    "        // taking care to simultaneously increment the Current Column Index\n",
+    "        Console.Write(\"{0,-3}\", $\"{ TwoDimensionalIntegerArray[ CurrentRowIndex , CurrentColIndex++ ] } \");\n",
+    "        \n",
+    "    }\n",
+    "    \n",
+    "    // After all that,\n",
+    "    // each of the Column Values of the Current Row have been printed,\n",
+    "    // so we now move on to the next line\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "\n",
+    "    // Increment the Current Row Index \n",
+    "    CurrentRowIndex++;\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// After All that,\n",
+    "// All Column Values have now been printed for every Row in the Array,\n",
+    "// as required"
    ]
   }
  ],
