new file:   7. Arrays/Anatomy of an Array.ipynb modified:   7. Arrays/Arrays.ipynb new file:   7. Arrays/MultiDimensional.ipynb new file:   7. Arrays/OneDimensional.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Arrays are vital for most programming languages.<br>They are *collections* of *variables* which are commonly reffered to as *elements*:\n",
-    "----"
+    "##### Arrays are vital for most programming languages.<br>They are *collections* of *variables* which are commonly reffered to as *elements*:"
    ]
   },
   {
@@ -57,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
   },
   {
@@ -1182,7 +1181,7 @@
     "while( CurrentRowIndex <= LastRowIndex )\n",
     "{\n",
     "\n",
-    "    // Let the Current Column Index be reset to the First Column Index\n",
+    "    // Let the Current Column Index be reset back to the First Column Index\n",
     "    CurrentColIndex = FirstColIndex;\n",
     "\n",
     "\n",
@@ -1191,7 +1190,7 @@
     "    {\n",
     "        \n",
     "        // Print the Value at the Current Column Index,\n",
-    "        // formatted to present a charater width of 3 digits to the right of wach element,\n",
+    "        // formatted to present a character width of 3 digits to the right of wach element,\n",
     "        // taking care to simultaneously increment the Current Column Index\n",
     "        Console.Write(\"{0,-3}\", $\"{ TwoDimensionalIntegerArray[ CurrentRowIndex , CurrentColIndex++ ] } \");\n",
     "        \n",
@@ -1212,6 +1211,27 @@
     "// All Column Values have now been printed for every Row in the Array,\n",
     "// as required"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using a `for` Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
