modified:   6. Loops/Loops.ipynb deleted:    7. Arrays/Arrays.ipynb modified:   7. Arrays/MultiDimensional.ipynb modified:   7. Arrays/OneDimensional.ipynb

--- a/6. Loops/Loops.ipynb
+++ b/6. Loops/Loops.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Programming often requires repeated execution of a sequence of operations. A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
+    "##### Programming often requires repeated execution of a sequence of operations.<br><br>A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
     "##### Depending on the type of the loop, the code in it is repeated a fixed number of times or repeats until a given *condition* is `true` (exists).  \n",
     "----"
    ]
