--- a/7. Arrays/MultiDimensional.ipynb
+++ b/7. Arrays/MultiDimensional.ipynb
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Row 1**"
+    "##### **Row 0**"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Row 2**"
+    "##### **Row 1**"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Row 3**"
+    "##### **Row 2**"
    ]
   },
   {
@@ -651,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using a `while` Loop"
+    "#### Using Nested `while` Loops"
    ]
   },
   {
@@ -710,6 +710,7 @@
     "        \n",
     "    }\n",
     "    \n",
+    "    \n",
     "    // After all that,\n",
     "    // each of the Column Values of the Current Row have been printed,\n",
     "    // so we now move on to the next line\n",
@@ -730,12 +731,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using a `for` Loop"
+    "#### Using Nested `for` Loops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -746,33 +747,48 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(3,25): error CS0103: The name 'FirstIndex' does not exist in the current context\r\n(3,53): error CS0103: The name 'LastIndex' does not exist in the current context\r\n(7,23): error CS0103: The name 'SixElementIntegerArray' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(3,25): error CS0103: The name 'FirstIndex' does not exist in the current context\r\n",
-      "(3,53): error CS0103: The name 'LastIndex' does not exist in the current context\r\n",
-      "(7,23): error CS0103: The name 'SixElementIntegerArray' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  2  3  4  \r\n",
+      "5  6  7  8  \r\n",
+      "9  10 11 12 \r\n"
      ]
     }
    ],
    "source": [
-    "// Iterating For each of the elements from the First Index of the array \n",
-    "// up until the Last Index:\n",
-    "for( int CurrentIndex = FirstIndex; CurrentIndex <= LastIndex; CurrentIndex++ )\n",
+    "// Iterating For each of the elements from the First Row Index of the array \n",
+    "// up until the Last Row Index:\n",
+    "for( int CurrentRowIndex = FirstRowIndex; CurrentRowIndex <= LastRowIndex; CurrentRowIndex++ )\n",
     "{\n",
     "\n",
-    "    // Print the Value at the Current Index\n",
-    "    Console.Write($\"{ SixElementIntegerArray[ CurrentIndex ] } \");\n",
+    "    // Iterating For each of the elements from the First Column Index of the array \n",
+    "    // up until the Last Column Index:\n",
+    "    for( int CurrentColIndex = FirstColIndex; CurrentColIndex <= LastColIndex; CurrentColIndex++ )\n",
+    "    {\n",
     "\n",
-    "}"
+    "        // Print the Value at the Current Col Index\n",
+    "        Console.Write(\"{0,-3}\", $\"{ TwoDimensionalIntegerArray[ CurrentRowIndex ,  CurrentColIndex] } \");\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // After all that,\n",
+    "    // each of the Column Values of the Current Row have been printed,\n",
+    "    // so we now move on to the next line\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// After All that,\n",
+    "// All Column Values have now been printed for every Row in the Array,\n",
+    "// as required"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using a `foreach` Loop"
+    "#### Using Nested `foreach` Loops"
    ]
   },
   {
