--- a/7. Arrays/OneDimensional.ipynb
+++ b/7. Arrays/OneDimensional.ipynb
@@ -475,6 +475,36 @@
     "// We also cannot add anything further to the left of index 0\n",
     "SixElementIntegerArray[ -1 ] = 0;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n   at Submission#15.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n",
+      "   at Submission#15.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
+   "source": [
+    "// Similarly,\n",
+    "// We also cannot add anything further to the left of index 0\n",
+    "SixElementIntegerArray[ -1 ] = 0;"
+   ]
   }
  ],
  "metadata": {
