--- a/7. Arrays/OneDimensional.ipynb
+++ b/7. Arrays/OneDimensional.ipynb
@@ -239,6 +239,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
     "vscode": {
      "languageId": "dotnet-interactive.csharp"
     }
