--- a/7. Arrays/Jagged.ipynb
+++ b/7. Arrays/Jagged.ipynb
@@ -832,6 +832,61 @@
     "// All Column Values have now been printed for every Row in the Array,\n",
     "// as required"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using Nested `foreach` Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 \r\n",
+      "5 6 7 \r\n",
+      "8 9 \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// For Each Row in the Jagged Array\n",
+    "foreach( int[] Row in JaggedArray)\n",
+    "{\n",
+    "\n",
+    "    // For each Column Value in this Row\n",
+    "    foreach( int ColumnValue in Row  )\n",
+    "    {\n",
+    "\n",
+    "        // Print that Column Value \n",
+    "        Console.Write( $\"{ ColumnValue } \" );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // After all that,\n",
+    "    // each of the Column Values of the Current Row have been printed,\n",
+    "    // so we now move on to the next line\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// After All that,\n",
+    "// All Column Values have now been printed for every Row in the Array,\n",
+    "// as required"
+   ]
   }
  ],
  "metadata": {
