modified:   7. Arrays/Jagged.ipynb

--- a/7. Arrays/Jagged.ipynb
+++ b/7. Arrays/Jagged.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -668,7 +668,8 @@
     "foreach( int[ , ] TwoDimensionalArray in JaggedArrayOf3TwoDimensionalArrays )\n",
     "{\n",
     "    Console.WriteLine( \n",
-    "        $\"The element at index { JaggedArrayIndex++ }'s Length is:\\t{ TwoDimensionalArray.Length }\" );\n",
+    "        $\"The element at index { JaggedArrayIndex++ }'s Length is:\\t{ TwoDimensionalArray.Length }\" \n",
+    "    );\n",
     "}"
    ]
   },
