modified:   9. Methods/An Overview.ipynb

--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -96,10 +96,156 @@
     }
    },
    "source": [
-    "- Better Structured Program\n",
-    "- More Readable Code\n",
+    "- Better structured program\n",
+    "- More readable code\n",
     "- Less maintenance\n",
     "- enables **code resuse**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### How to Declare, Implement and Invoke a Method"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "|Action|Description|\n",
+    "|---|---|\n",
+    "|Declare|A sort of \"registration\" in the program, made so it can be successfully referenced by the rest of the program at any time.|\"\n",
+    "|Implement|The process of typing the code that actually goes about ressolving a particular task.|\n",
+    "|Invoke|The process that \"calls\" the already declared method, from any other part of the code.|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Declaring A Method"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In the C# language, a method can be declared only between the opening `{` and the closing `}` brackets of a `class`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class SimpleCSharpClassWithAMethodThatJustSaysHello \n",
+    "{ // the opening brace of the class \n",
+    "    \n",
+    "    //DECLARING a Method between the class' body braces\n",
+    "    public void SayHello()\n",
+    "    {\n",
+    "\n",
+    "        //IMPLEMENTING the desired solution.\n",
+    "        Console.WriteLine(\"Just saying hello!\");\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "} // the closing brace of the class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Instantiating the class\n",
+    "\n",
+    "SimpleCSharpClassWithAMethodThatJustSaysHello JustSayHi = \n",
+    "    new SimpleCSharpClassWithAMethodThatJustSaysHello();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Just saying hello!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// INVOKING the Method\n",
+    "\n",
+    "JustSayHi.SayHello();"
    ]
   }
  ],
