modified:   9. Methods/An Overview.ipynb

--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -81,6 +81,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "### Reasons to use Methods"
    ]
   },
@@ -100,6 +115,21 @@
     "- More readable code\n",
     "- Less maintenance\n",
     "- enables **code resuse**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -134,6 +164,21 @@
     "|Declare|A sort of \"registration\" in the program, made so it can be successfully referenced by the rest of the program at any time.|\"\n",
     "|Implement|The process of typing the code that actually goes about ressolving a particular task.|\n",
     "|Invoke|The process that \"calls\" the already declared method, from any other part of the code.|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
